# interview-skel

./: .gitignore  README.md  install.sh  pyproject.toml  system_library.draw  ui_library.draw  ui_sketch.draw
energy_analyzer/: energy_client.py  models.py  models_and_fixtures.py  test_biz_logic.py
energy_analyzer/shared_utils/: energy_client.py
tests/: test_biz.py
