[tool.poetry]
name = "energy_analyzer"
version = "0.1.0"
description = ""
authors = ["Technology <technology@carbonlighthouse.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
pytest = "^7.2.0"
python-dateutil = "^2.8.2"
pydantic = "^1.9"
certifi = "^2022.12.07"    # See: https://github.com/CarbonLighthouse/interview-skel/security/dependabot/2

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = { extras = [
    "yapf",
    "rope",
    "pyflakes",
], version = "^1.5.9" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
